--- a/dropdown_menu/style.css
+++ b/dropdown_menu/style.css
@@ -1,18 +1,40 @@
+:root {
+  --dark-grey: #333333;
+  --light-grey: #555;
+}
+
+* {
+  font-family: Roboto;
+  box-sizing: border-box;
+}
+
+body {
+  background: blue;
+}
 .menu {
+  margin: 0 auto;
+  width: 40rem;
   background: #F7F6F5;
   border-top: 1px solid #CFCFCF;
 }
 
-.menu__item {
-  font-family: Roboto;
-  font-size: 0.9rem;
-  font-weight: 800;
+.menu__main__item:first-child:hover {
+  border-left: none;
+  margin-left: 0;
+}
+
+.menu__main__item:last-child:hover {
+  border-right: none;
+  margin-left: 0;
+}
+
+.menu__main__item {
   display: inline-block;
   padding: 0.5rem 2rem;
   border-bottom: 1px solid #CFCFCF;
 }
 
-.menu__item:hover {
+.menu__main__item:hover {
   background: white;
   border-bottom: none;
   border-right: 1px solid #CFCFCF;
@@ -21,14 +43,14 @@
 }
 
 .menu__item--current .menu__item__link {
-  color: #333333;
+  color: var(--dark-grey);
   border-bottom: 2px solid #333;
   padding-bottom: .3rem;
 }
 
 .menu__item__link {
   text-decoration: none;
-  color: #555;
+  color: var(--dark-grey);
   font-family: Roboto;
   font-size: .9rem;
   font-weight: 800;
@@ -37,4 +59,42 @@
 .menu__item__link:hover {
   text-decoration: underline;
   color: #1C60BB;
+}
+
+.menu__sub {
+  height: 18rem;
+  background: white;
+}
+
+.menu__sub__categories {
+  vertical-align: top;
+  display: inline-block;
+  width: calc(60% - 2px);
+  padding: .5rem;
+}
+
+.menu__sub__visual__img {
+  width: 100%;
+}
+
+.menu__sub__categories__category {
+  display: inline-block;
+  width: calc(50% - 2px);
+  background: red;
+  vertical-align: top;
+}
+
+.menu__sub__categories__header {
+  font-size: .9rem;
+  border-bottom: 1px solid var(--light-grey);
+  margin-right: 1rem;
+  padding-bottom: 1rem;
+}
+
+.menu__sub__categories__items {
+  list-style: none;
+  padding: 0;
+  font-size: .9rem;
+  line-height: 1.4rem;
+  color: var(--light-grey);
 }
