--- a/dropdown_menu/style.css
+++ b/dropdown_menu/style.css
@@ -1,40 +1,126 @@
-.menu {
-  background: #F7F6F5;
-  border-top: 1px solid #CFCFCF;
+:root {
+  --dark-grey: #333333;
+  --light-grey: #555;
+  --border-grey: #CFCFCF;
 }
 
-.menu__item {
+* {
   font-family: Roboto;
-  font-size: 0.9rem;
-  font-weight: 800;
+  box-sizing: border-box;
+}
+
+body {
+  background: blue;
+}
+
+.menu {
+  margin: 0 auto;
+  width: 70rem;
+  background: #F7F6F5;
+  border-top: 1px solid var(--border-grey);
+}
+
+.menu__main {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.menu__main__item {
   display: inline-block;
   padding: 0.5rem 2rem;
-  border-bottom: 1px solid #CFCFCF;
+  border-bottom: 1px solid var(--border-grey);
 }
 
-.menu__item:hover {
+.menu__main__item:first-child:hover {
+  border-left: none;
+  margin-left: 0;
+}
+
+.menu__main__item:last-child:hover {
+  border-right: none;
+  margin-right: 0;
+}
+
+.menu__main__item:hover {
   background: white;
   border-bottom: none;
-  border-right: 1px solid #CFCFCF;
-  border-left: 1px solid #CFCFCF;
+  border-right: 1px solid var(--border-grey);
+  border-left: 1px solid var(--border-grey);
   margin: 0 -1px;
 }
 
-.menu__item--current .menu__item__link {
-  color: #333333;
+.menu__main__item--current .menu__main__item__link {
+  color: var(--dark-grey);
   border-bottom: 2px solid #333;
-  padding-bottom: .3rem;
+  padding-bottom: 0.3rem;
 }
 
-.menu__item__link {
+.menu__main__item__link {
   text-decoration: none;
-  color: #555;
+  color: var(--light-grey);
   font-family: Roboto;
-  font-size: .9rem;
+  font-size: 0.9rem;
   font-weight: 800;
 }
 
-.menu__item__link:hover {
+.menu__main__item__link:hover {
   text-decoration: underline;
   color: #1C60BB;
+}
+
+.menu__sub {
+  height: 18rem;
+  background: white;
+  display: none;
+}
+
+.menu__sub__categories {
+  vertical-align: top;
+  display: inline-block;
+  width: calc(40% - 1rem - 2px);
+  padding: 0.8rem;
+  margin-left: 1rem;
+}
+
+.menu__sub__visual {
+  display: inline-block;
+  width: calc(60% - 2px);
+  padding: 0.5rem;
+  height: 100%;
+}
+
+.menu__sub__visual__img {
+  width: 100%;
+  height: 100%;
+}
+
+.menu__sub__categories__category {
+  display: inline-block;
+  width: calc(50% - 2px);
+  vertical-align: top;
+}
+
+.menu__sub__categories__header {
+  font-size: 0.9rem;
+  border-bottom: 1px solid var(--border-grey);
+  margin-right: 1rem;
+  padding-bottom: 1rem;
+}
+
+.menu__sub__categories__items {
+  list-style: none;
+  padding: 0;
+  line-height: 1.6rem;
+  color: var(--light-grey);
+}
+
+.menu__sub__categories__item__link {
+  text-decoration: none;
+  color: var(--light-grey);
+  font-size: .8rem;
+  font-weight: 800;
+}
+
+.menu__sub__categories__item__link:hover {
+  text-decoration: underline;
 }
